@@ -9,6 +9,7 @@ DFHack future
     - multicmd: run a sequence of dfhack commands, separated by ';'
     - autobutcher: A GUI front-end for the autobutcher plugin.
     - startdwarf: change the number of dwarves for a new embark
+    - digmat: dig veins/layers tile by tile, as discovered
   Misc improvements:
     - exterminate: renamed from slayrace, add help message, add butcher mode
     - autoSyndrome: disable by default
